# fabrik

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
crates/fabrik-broker/: Cargo.toml
crates/fabrik-broker/src/: lib.rs
crates/fabrik-cli/: Cargo.toml
crates/fabrik-cli/src/: main.rs
crates/fabrik-cli/test-fixtures/temporal-activity-factory-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-activity-factory-qualified/src/: activities.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-activity-failure-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-activity-failure-qualified/src/: activities.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-async-external-pressure/: package.json
crates/fabrik-cli/test-fixtures/temporal-async-external-pressure/src/: activities.ts  client.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-bootstrap-dynamic-taskqueue-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-bootstrap-dynamic-taskqueue-qualified/src/: activities.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-bootstrap-esm-qualified/: package.json  tsconfig.json
crates/fabrik-cli/test-fixtures/temporal-bootstrap-esm-qualified/src/: activities.ts  client.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-bootstrap-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-bootstrap-qualified/src/: client.ts  shared.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-bootstrap-self-file-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-bootstrap-self-file-qualified/src/: worker.ts
crates/fabrik-cli/test-fixtures/temporal-converter-trust-pressure/: package.json
crates/fabrik-cli/test-fixtures/temporal-converter-trust-pressure/src/: activities.ts  client.ts  data-converter.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-data-converter-factory-qualified/: package.json  tsconfig.json
crates/fabrik-cli/test-fixtures/temporal-data-converter-factory-qualified/src/: data-converter.ts  worker.ts  workflows.ts
crates/fabrik-cli/test-fixtures/temporal-dynamic-bootstrap-blocked/: package.json  tsconfig.json
crates/fabrik-cli/test-fixtures/temporal-interceptor-pressure/: package.json
crates/fabrik-cli/test-fixtures/temporal-map-state-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-monorepo-multiworker-pressure/: package.json  tsconfig.json
crates/fabrik-cli/test-fixtures/temporal-namespace-workflow-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-patching-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-payload-blocked/: package.json
crates/fabrik-cli/test-fixtures/temporal-payload-path-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-payload-path-qualified-v2/: package.json
crates/fabrik-cli/test-fixtures/temporal-payload-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-relaxed-transpile-qualified/: tsconfig.json
crates/fabrik-cli/test-fixtures/temporal-search-attributes-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-shadow-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-sinks-pressure/: package.json
crates/fabrik-cli/test-fixtures/temporal-supported/: package.json
crates/fabrik-cli/test-fixtures/temporal-supported-api-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-test-worker-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-unsupported-api-blocked/: package.json
crates/fabrik-cli/test-fixtures/temporal-versioning-upgrade-pressure/: package.json
crates/fabrik-cli/test-fixtures/temporal-versioning-upgrade-pressure-v2/: package.json
crates/fabrik-cli/test-fixtures/temporal-visibility-blocked/: package.json
crates/fabrik-cli/test-fixtures/temporal-worker-versioning-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-workflow-only-qualified/: package.json
crates/fabrik-cli/test-fixtures/temporal-workspace-qualified/: package.json
crates/fabrik-cli/tests/: migrate.rs
crates/fabrik-events/: Cargo.toml
crates/fabrik-events/src/: lib.rs
crates/fabrik-store/: Cargo.toml
crates/fabrik-store/src/: lib.rs
crates/fabrik-throughput/: Cargo.toml
crates/fabrik-throughput/src/: bridge.rs  dataflow.rs  lib.rs
crates/fabrik-workflow/: Cargo.toml
crates/fabrik-workflow/src/: compiled.rs  lib.rs
docs/: roadmap.md  (+20 more)
services/activity-worker-service/: Cargo.toml
services/activity-worker-service/src/: main.rs
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/benchmark-runner/: Cargo.toml
services/benchmark-runner/src/: main.rs
services/executor-service/: Cargo.toml
services/executor-service/src/: main.rs
services/ingest-service/: Cargo.toml
services/ingest-service/src/: main.rs
services/matching-service/: Cargo.toml
services/matching-service/src/: main.rs
services/query-service/: Cargo.toml
services/query-service/src/: main.rs
services/replay-tool/: Cargo.toml
services/replay-tool/src/: main.rs
services/streams-runtime/: Cargo.toml
services/streams-runtime/src/: bridge.rs  dataflow_engine.rs  local_state.rs  main.rs  stream_jobs.rs
services/streams-runtime/src/local_state/: checkpoint_state.rs  derivation.rs  keyspace.rs  mutation_state.rs  storage_core.rs  stream_job_state.rs
services/throughput-projector/: Cargo.toml
services/throughput-projector/src/: main.rs
services/throughput-runtime/: Cargo.toml
services/throughput-runtime/src/: aggregation.rs  bridge.rs  local_state.rs  main.rs  stream_jobs.rs
services/throughput-runtime/src/local_state/: aggregation_state.rs  checkpoint_state.rs  db_state.rs  keyspace.rs  mutation_state.rs  query_state.rs  scheduling_state.rs  storage_core.rs  stream_job_state.rs
services/timer-service/: Cargo.toml
services/timer-service/src/: main.rs
(+312 files in other folders)
