[workspace]
members = [
    "crates/fabrik-broker",
    "crates/fabrik-cli",
    "crates/fabrik-config",
    "crates/fabrik-events",
    "crates/fabrik-service",
    "crates/fabrik-store",
    "crates/fabrik-throughput",
    "crates/fabrik-worker-protocol",
    "crates/fabrik-workflow",
    "services/activity-worker-service",
    "services/api-gateway",
    "services/ingest-service",
    "services/benchmark-runner",
    "services/query-service",
    "services/replay-tool",
    "services/timer-service",
    "services/unified-runtime",
    "services/throughput-projector",
    "services/throughput-runtime",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
aws-config = "1.8.8"
aws-sdk-s3 = "1.115.0"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rocksdb = "0.22.0"
rskafka = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tonic = { version = "0.12.3", features = ["transport"] }
prost = "0.13.5"
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["serde", "v5", "v7"] }
