[package]
name = "fabrik-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "fabrik"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
libc = "0.2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
fabrik-workflow = { path = "../fabrik-workflow" }
