[package]
name = "fabrik-events"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
fabrik-throughput = { package = "fabrik-streams", path = "../fabrik-throughput" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
