[package]
name = "fabrik-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fabrik-events = { path = "../fabrik-events" }
fabrik-throughput = { package = "fabrik-streams", path = "../fabrik-throughput" }
fabrik-workflow = { path = "../fabrik-workflow" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
