[package]
name = "fabrik-throughput"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
chrono.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
uuid.workspace = true
