[package]
name = "activity-worker-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
fabrik-config = { path = "../../crates/fabrik-config" }
fabrik-service = { path = "../../crates/fabrik-service" }
fabrik-throughput = { package = "fabrik-streams", path = "../../crates/fabrik-throughput" }
fabrik-worker-protocol = { path = "../../crates/fabrik-worker-protocol" }
fabrik-workflow = { path = "../../crates/fabrik-workflow" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
