[package]
name = "api-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
fabrik-broker = { path = "../../crates/fabrik-broker" }
fabrik-config = { path = "../../crates/fabrik-config" }
fabrik-service = { path = "../../crates/fabrik-service" }
fabrik-store = { path = "../../crates/fabrik-store" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
fabrik-events = { path = "../../crates/fabrik-events" }
fabrik-workflow = { path = "../../crates/fabrik-workflow" }
tower = "0.5.2"
uuid.workspace = true
