[package]
name = "benchmark-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

fabrik-config = { path = "../../crates/fabrik-config" }
fabrik-broker = { path = "../../crates/fabrik-broker" }
fabrik-store = { path = "../../crates/fabrik-store" }
fabrik-throughput = { package = "fabrik-streams", path = "../../crates/fabrik-throughput" }
fabrik-workflow = { path = "../../crates/fabrik-workflow" }
