[package]
name = "throughput-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
fabrik-broker = { path = "../../crates/fabrik-broker" }
fabrik-config = { path = "../../crates/fabrik-config" }
fabrik-events = { path = "../../crates/fabrik-events" }
fabrik-service = { path = "../../crates/fabrik-service" }
fabrik-store = { path = "../../crates/fabrik-store" }
fabrik-throughput = { path = "../../crates/fabrik-throughput" }
fabrik-workflow = { path = "../../crates/fabrik-workflow" }
fabrik-worker-protocol = { path = "../../crates/fabrik-worker-protocol" }
futures-util.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
